--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-autopep8==1.3.3
+astroid==1.5.3
 Django==1.11.7
-pkg-resources==0.0.0
+isort==4.2.15
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 pycodestyle==2.3.1
+pylint==1.7.4
 pytz==2017.3
+six==1.11.0
+wrapt==1.10.11
